# begunici

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject copy.toml  pyproject.toml  requirements.txt
begunici/: asgi.py  settings.py  urls.py  views.py  wsgi.py
begunici/app_types/animals/: admin.py  apps.py  archive_acts.py  backup_utils.py  context_processors.py  log_utils.py  middleware.py  models.py  models_user_log.py  serializers.py  urls.py  utils_permissions.py  views.py  views_admin.py
begunici/app_types/notes/: apps.py  models.py  serializers.py  urls.py  views.py
begunici/app_types/public_site/: apps.py  middleware.py  urls.py  views.py
begunici/app_types/veterinary/: admin.py  models.py  serializers.py  urls.py  vet_admin.py  vet_apps.py  vet_models.py  vet_serializers.py  vet_urls.py  vet_views.py  views.py
begunici/begunici/animals/: models.py  serializers.py  views.py
begunici/begunici/veterinary/: models.py  serializers.py  views.py
begunici/static/css/: public.css  styles.css
begunici/static/js/: animal_analytics.js  animal_detail.js  animals.js  archive.js  archive_act_modal.js  calendar.js  calendar_notes.js  common.js  ewes.js  export-common.js  journal_shift_transfer.js  lambings_management.js  main.js  maker.js  maker_analytics.js  maker_detail.js  makers.js  notes.js  otbivka.js  places_map.js  rams.js  sheeps.js  utils.js  vet_cares.js  (+4 more)
begunici/templates/: admin_panel.html  base.html  base_public.html  create_veterinary.html  index.html  internal_login.html  places_map.html
(+115 files in other folders)
